# bootstep

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  installer.py  pyproject.toml
scripts/: .venv-check
src/bootstep/: __main__.py
src/bootstep/adapter/: installer.py  merge.py  rollback.py  template.py
src/bootstep/util/: filesys.py  logging.py  subprocess.py
test/: test_placeholder.py
